不创建默认视图